codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_ctrl_c_quit_idle.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ctrl + c again to quit                                       100% context left"
"                                                                                "
